--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DoodleDoodle</title>
+    <title>Cuties💖💖</title>
     <script
       src="https://kit.fontawesome.com/dbeb62ff9b.js"
       crossorigin="anonymous"
@@ -34,8 +34,8 @@
             alt=""
           />
           <div class="votes">
-            <p>vote <i class="fa-regular fa-heart"></i></p>
-            <p>votes: 0</p>
+            <p id="vote">vote <i class="fa-regular fa-heart"></i></p>
+            <p id="votesCount">votes: 0</p>
           </div>
         </div>
       </div>
