created README file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cuties💖💖</title>
+    <title>Cuties 💗🥰</title>
     <script
       src="https://kit.fontawesome.com/dbeb62ff9b.js"
       crossorigin="anonymous"
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="header">
-      <h1>VOTE FOR YOUR FAVOURITE ANIMAL</h1>
+      <h1>VOTE FOR YOUR FAVOURITE ANIMAL💖</h1>
       <img
         src="./src/images/Golden-Line-PNG-Free-Download.png"
         alt="line-decor"
