votes section updated

--- a/index.html
+++ b/index.html
@@ -34,12 +34,21 @@
             alt=""
           />
           <div class="votes">
-            <p id="vote">vote <i class="fa-regular fa-heart"></i></p>
+            <label>
+                <span id="label">Enter no. of votes 0 - 10</span>
+                <input id="votesInput" type="number" min="0" max="10">
+            </label>
+            <p id="vote"><i class="fa-regular fa-heart"></i></p>
             <p id="votesCount">votes: 0</p>
           </div>
         </div>
       </div>
     </section>
+    <!-- <section id="formSection">
+        <form>
+
+        </form>
+    </section> -->
     <script src="./src/JS/index.js"></script>
   </body>
 </html>
