--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
       />
     </div>
     <section class="mainSection">
+        <!-- animals name container -->
       <div id="animalNames">
         <h4>Animals List</h4>
         <button id="addAnimal">
           <i class="fa-solid fa-plus"></i> Add Animal
         </button>
       </div>
+      <!-- animal details container -->
       <div id="animalDetails">
         <div class="animalCard">
           <p>Ms. Zebra</p>
@@ -44,6 +46,7 @@
         </div>
       </div>
     </section>
+    <!-- form section to be displayed as a modal window -->
     <!-- <section id="formSection">
         <form>
 
