created add animals section

--- a/index.html
+++ b/index.html
@@ -47,11 +47,20 @@
       </div>
     </section>
     <!-- form section to be displayed as a modal window -->
-    <!-- <section id="formSection">
-        <form>
-
+    <section id="addAnimalsSection">
+      <button id="cancel">&#x2715</button>
+        <form id="submit">
+          <label>
+            <p>Enter animal name</p>
+            <input type="text" placeholder="e.g Mr. Tiger">
+          </label> 
+          <label>
+            <p>Enter path to animal image</p>
+          <input type="text" placeholder="e.g: https://media2.giphy.com/media/20G9uNqE3K4dRjCppA/source.gif">
+        </label>
+          <button type="submit" >Submit</button>
         </form>
-    </section> -->
+    </section>
     <script src="./src/JS/index.js"></script>
   </body>
 </html>
