testing post method

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         <form id="submit">
           <label>
             <p>Enter animal name</p>
-            <input type="text" placeholder="e.g Mr. Tiger">
+            <input id="name" type="text" placeholder="e.g Mr. Tiger">
           </label> 
           <label>
             <p>Enter path to animal image</p>
-          <input type="text" placeholder="e.g: https://media2.giphy.com/media/20G9uNqE3K4dRjCppA/source.gif">
+          <input id="imageUrl" type="text" placeholder="e.g: https://media2.giphy.com/media/20G9uNqE3K4dRjCppA/source.gif">
         </label>
           <button type="submit" >Submit</button>
         </form>
